nullaway_error_77400915-57F8-4E13-9D19-64E531AE25EF.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/result/method/InvocableHandlerMethod.java:209: error: [NullAway] dereferenced expression adapter is @Nullable
					return (asyncVoid ? Mono.from(adapter.toPublisher(value)) : Mono.empty());
					                                     ^
    (see http://t.uber.com/nullaway )
